--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hello-world",
+  "name": "hello-world-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Running dummy test...\" && exit 0"
+    "test": "echo \"Dummy test passed\""
   },
   "dependencies": {
     "express": "^4.18.2"
