--- a/examples/hello-world/jenkinsfile
+++ b/examples/hello-world/jenkinsfile
@@ -1,10 +1,42 @@
 pipeline {
     agent any
 
+    environment {
+        APP_DIR = "examples/hello-world"
+        IMAGE_NAME = "hello-world-app"
+    }
+
     stages {
-        stage('Build') {
+        stage('Checkout') {
             steps {
-                echo 'Hello, Jenkins!'
+                git 'https://github.com/prasadbeedam/express.git'
+            }
+        }
+
+        stage('Build Docker Image') {
+            steps {
+                dir("${APP_DIR}") {
+                    sh 'docker build -t hello-world-app .'
+                }
+            }
+        }
+
+        stage('Run Container') {
+            steps {
+                sh 'docker rm -f hello-app || true'
+                sh 'docker run -d -p 8080:8080 --name hello-app hello-world-app'
+            }
+        }
+
+        stage('Test Endpoint') {
+            steps {
+                sh 'sleep 3 && curl --fail http://localhost:8080'
+            }
+        }
+
+        stage('Cleanup') {
+            steps {
+                sh 'docker stop hello-app && docker rm hello-app'
             }
         }
     }
