--- a/examples/hello-world/jenkinsfile
+++ b/examples/hello-world/jenkinsfile
@@ -1,17 +1,10 @@
 pipeline {
     agent any
-
     stages {
-        stage('Clone Repository') {
+        stage('Clone') {
             steps {
-                git branch: 'main', url: 'https://github.com/prasadbeedam/express.git'
+                echo 'Cloning repo and executing pipeline...'
             }
-        }
-    }
-
-    post {
-        always {
-            echo "Repository cloned successfully."
         }
     }
 }
