--- a/examples/hello-world/docker-compose.yml
+++ b/examples/hello-world/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3.8'
 services:
   express-app:
     build:
-      context: ./examples/hello-world
+      context: .
     ports:
       - "8080:8080"
     environment:
       - NODE_ENV=development
     volumes:
-      - ./examples/hello-world:/app
+      - .:/app
       - /app/node_modules
     command: npm start
