--- a/examples/hello-world/jenkinsfile
+++ b/examples/hello-world/jenkinsfile
@@ -12,6 +12,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 git 'https://github.com/prasadbeedam/express.git'
+                sh  "ls -ltr"
             }
         }
 
