--- a/examples/hello-world/jenkinsfile
+++ b/examples/hello-world/jenkinsfile
@@ -3,6 +3,13 @@ pipeline {
         label 'AGENT-1'
     }
   stages {
+    stage('checkout') {
+      steps {
+        git 'https://github.com/prasadbeedam/express.git'
+        sh "ls -ltr"
+      }
+    }  
+  stages {
     stage('Build') {
       steps {
         echo 'Building...'
