--- a/examples/hello-world/jenkinsfile
+++ b/examples/hello-world/jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
         stage('List Files in hello-world') {
             steps {
                 dir('examples/hello-world') {
+                    sh "git checkout main"
                     sh "ls -ltr"
                 }
             }
