--- a/examples/hello-world/deployment.yaml
+++ b/examples/hello-world/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-world-deployment
+  namespace: hello-world
 spec:
   replicas: 2
   selector:
@@ -14,7 +15,7 @@ spec:
     spec:
       containers:
       - name: hello-world-container
-        image: prasadyadav99/hello-world-app:1.0.0   # ← Jenkins will update this
+        image: prasadyadav99/hello-world-app:latest # will be updated dynamically
         ports:
         - containerPort: 8080
 ---
@@ -22,11 +23,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world-service
+  namespace: hello-world
 spec:
   type: LoadBalancer
   selector:
     app: hello-world
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 8080
