--- a/examples/hello-world/jenkinsfile
+++ b/examples/hello-world/jenkinsfile
@@ -34,6 +34,7 @@ pipeline {
                         echo "📦 Application version: ${appVersion}"
 
                         currentBuild.displayName = "v${appVersion}"
+                        env.APP_VERSION = appVersion
                         env.IMAGE_TAG = "${IMAGE_NAME}:${appVersion}"
                         env.FULL_IMAGE_NAME = "${DOCKERHUB_USER}/${IMAGE_NAME}:${appVersion}"
                     }
@@ -81,7 +82,6 @@ pipeline {
             steps {
                 script {
                     echo "📤 Pushing image: ${env.FULL_IMAGE_NAME}"
-
                     withCredentials([usernamePassword(credentialsId: 'dockerhub', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
                         sh """
                             echo "$PASSWORD" | docker login -u "$USERNAME" --password-stdin
@@ -89,7 +89,6 @@ pipeline {
                             docker logout
                         """
                     }
-
                     echo "✅ Image successfully pushed: ${env.FULL_IMAGE_NAME}"
                 }
             }
@@ -108,6 +107,11 @@ pipeline {
         success {
             echo "🧼 Cleaning up workspace..."
             deleteDir()
+
+            echo "🚀 Triggering CD pipeline with version ${env.APP_VERSION}"
+            build job: 'hello-world-CD', parameters: [
+                string(name: 'APP_VERSION', value: env.APP_VERSION)
+            ]
         }
 
         failure {
